--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <script src="http://canvasjs.com/assets/script/canvasjs.min.js"></script>
 </head>
 
-<body ng-app="project" id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
+<body ng-app="project" id="page-top" data-spy="scroll" data-target=".navbar-fixed-top" onload="cenetralizedMap()">
     <!-- navbar start -->
     <nav class="navbar  navbar-fixed-top">
         <div class="container">
