--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,16 @@
     <!--<script src="scripts/jquery.easy-autocomplete.js"></script> -->
     <!--<link rel="stylesheet" href="scripts/easy-autocomplete.min.css"> -->
     <!-----------------------------charts-------------------------->
+    <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-84377196-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
     <script src="http://canvasjs.com/assets/script/canvasjs.min.js"></script>
 </head>
 
