--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>HYF | 7alal</title>
+    <title>is7alal</title>
     <!-------------------------ANGULAR LIBRARIES-------------------->
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
     <!-------------------------STYLE LIBRARIES---------------------->
@@ -185,7 +185,7 @@
         </div>
     </div>
     <footer>
-        <center>Hack.Your.Future</center>
+        <center>Done by <b>Marwa Muhallaya</b><br>hackyourfuture</center>
     </footer>
 </body>
 
