--- a/public/index.html
+++ b/public/index.html
@@ -185,7 +185,7 @@
         </div>
     </div>
     <footer>
-        <center>Done by <b>Marwa Muhallaya</b><br>hackyourfuture</center>
+        <center>Done by Marwa<br>hackyourfuture</center>
     </footer>
 </body>
 
